2005-02-10  Manish Singh  <yosh@gimp.org>

	* app/file/file-save.c (file_save_as): Make sure filename is
	initialized before use.

2005-02-10  Michael Natterer  <mitch@gimp.org>

	* plug-ins/uri/uri-backend-gnomevfs.c: use gimp_memsize_to_string()
	instead of always showing bytes with a translatable %llu format
	string. Increased BUFSIZE to 4096.

	* plug-ins/uri/uri-backend-wget.c (uri_backend_load_image): don't
	leak the memsize string. Use sizeof(buf) instead of BUFSIZE.

2005-02-10  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpcroptool.c
	* app/tools/gimptransformtool.c: alternative button order for
	the info dialogs (bug #166678).

2005-02-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/displace.c: applied a modified patch from Joao
	S. O. Bueno Calligaris that adds a polar mode to the Displace
	plug-in (bug #161131).

2005-02-10  Sven Neumann  <sven@gimp.org>

	* app/file/file-save.c (file_save_as): applied a (slightly
	modified) patch from Shlomi Fish that automatically adds the .xcf
	extension if none is given (bug #165684).

2005-02-10  Sven Neumann  <sven@gimp.org>

	* app/actions/data-commands.c
	* app/actions/edit-commands.c
	* app/actions/error-console-commands.c
	* app/actions/file-commands.c
	* app/actions/gradient-editor-commands.c
	* app/actions/gradients-commands.c
	* app/actions/plug-in-commands.c
	* app/actions/templates-commands.c
	* app/actions/text-editor-commands.c
	* app/actions/tool-options-commands.c
	* app/dialogs/image-new-dialog.c
	* app/dialogs/resize-dialog.c
	* app/display/gimpdisplayshell-close.c
	* app/display/gimpdisplayshell-filter-dialog.c
	* app/display/gimpdisplayshell-scale.c
	* app/tools/gimpimagemaptool.c
	* app/tools/gimptexttool.c
	* libgimp/gimpexport.c
	* libgimpwidgets/gimpcolorbutton.c
	* libgimpwidgets/gimpfileentry.c
	* libgimpwidgets/gimpquerybox.c
	* libgimpwidgets/gimpunitmenu.c: applied another patch by Patrice
	Tremblay to make more dialogs obey the alternative button order