@@ -1,3 +1,8 @@
+2005-02-11  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimptoolbox.c: allow to paste URLs and filenames to
+	the toolbox using the middle mouse button.
+
 2005-02-10  Manish Singh  <yosh@gimp.org>
 
 	* app/file/file-save.c (file_save_as): Make sure filename is
